--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"
+              <a class="nav-link" href="./contactus.html"
                 ><span class="fa fa-address-card fa-lg"></span> Contact</a
               >
             </li>
@@ -199,3 +199,4 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   </body>
 </html>
+
